# x-hrforms-react-fastapi-postgresql

./: README.md
server/: .env.example  .gitignore  alembic.ini  pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 027af728ff54_create_tables.py  0fc2f0fe7e7d_users_table_picture_path_nullable_false.py  142fbe0b6056_create_tables.py  2b86860856e5_add_forgot_password_otp_and_forgot_.py  44deb94de4ed_add_forgot_password_otp_and_forgot_.py  50ed4043e1e4_users_model_new_fields_date_email_.py  5a6d39197d25_initial_tables.py  8a54f85af6fa_add_forgot_password_otp_and_forgot_.py  8d42ae22e37f_create_tables.py  b02e59d5495e_create_tables.py  bc0ef798422b_generate_tables.py  c89cbd60e2d2_create_tables.py  d2ef8599e846_reinitial_tables_2.py  e80c4826f68a_reinitial_tables.py  ff5b05657cb8_new_user_table_fields_recommender_id_.py
server/app/: main.py
server/app/core/: config.py  constants.py  dependencies.py  events.py
server/app/db/: base.py  init_models.py  session.py
server/app/models/: app_action.py  app_module.py  app_module_action.py  form_application.py  form_type.py  office.py  position.py  token.py  user.py  user_access.py  user_type.py  user_type_access.py
server/app/repositories/: authentication_repository.py  change_password_repository.py  forgot_password_repository.py  my_profile_repository.py  office_repository.py  position_repository.py  refresh_token_repository.py  starter_repository.py  user_repository.py  user_type_repository.py
server/expressjs/: .gitignore  index.js  package-lock.json  package.json
(+51 files in other folders)
