[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Rogincel Demata",email = "roginceldemata@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib (==5.0.0)",
    "alembic (==1.18.0)",
    "annotated-doc (==0.0.4)",
    "annotated-types (==0.7.0)",
    "anyio (==4.12.1)",
    "argon2-cffi (==25.1.0)",
    "argon2-cffi-bindings (==25.1.0)",
    "asyncpg (==0.31.0)",
    "cffi (==2.0.0)",
    "click (==8.3.1)",
    "colorama (==0.4.6)",
    "cryptography (==46.0.3)",
    "fastapi (==0.128.0)",
    "greenlet (==3.3.0)",
    "h11 (==0.16.0)",
    "idna (==3.11)",
    "mako (==1.3.10)",
    "markupsafe (==3.0.3)",
    "psycopg (==3.3.2)",
    "psycopg-binary (==3.3.2)",
    "psycopg2-binary (==2.9.11)",
    "pycparser (==2.23)",
    "pydantic (==2.12.5)",
    "pydantic-settings (==2.12.0)",
    "pydantic-core (==2.41.5)",
    "pyjwt (==2.10.1)",
    "python-dotenv (==1.2.1)",
    "sqlalchemy (==2.0.45)",
    "starlette (==0.50.0)",
    "typing-inspection (==0.4.2)",
    "typing-extensions (==4.15.0)",
    "tzdata (==2025.3)",
    "uvicorn (==0.40.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
